Reorganize multi-project structure [skip ci]